# vestim_win

./: .gitignore  BUILD_INSTALLER.md  FIXES_SUMMARY.md  INSTALL_INFO.txt  LICENSE  README.md  REMOTE_IMPLEMENTATION_SUMMARY.md  REMOTE_SETUP_GUIDE.md  Untitled Diagram.drawio  WORKFLOW_EXAMPLE.md  build.bat  build_exe.py  build_requirements.txt  build_with_remote.py  developer_readme.md  hyperparams.json  pyproject.toml  requirements.txt  requirements_f.txt  setup_remote.py  standalone_test.ipynb  version_info.txt  vestim_installer.iss  vestim_installer.nsi  vestim_server_client.bat  vestim_server_client.py  vestim_server_launcher.py  vestim_server_setup.py  vestim_universal_client.py
Vestim_Projects/output/job_20250627-203955/: augmentation_log.txt  hyperparams.json  job_metadata.json  training_tasks_summary.json
Vestim_Projects/output/job_20250627-203955/scalers/: augmentation_scaler.joblib  scaler_global_stats.json
build_ssh/: BUILD_SSH_README.md  build_complete.bat  build_requirements.txt  build_ssh.bat  build_ssh_distribution.py  test_dependencies.bat  vestim_ssh_installer.iss
build_ssh/ssh_build/vestim_server/: Analysis-01.toc  EXE-01.toc  PKG-01.toc  PYZ-01.toc  warn-vestim_server.txt  xref-vestim_server.html
build_ssh/ssh_build/vestim_setup/: Analysis-02.toc  EXE-02.toc  PKG-02.toc  PYZ-02.toc  warn-vestim_setup.txt  xref-vestim_setup.html
build_ssh/ssh_build/vestim_universal/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-vestim_universal.txt  xref-vestim_universal.html
build_ssh/ssh_dist/: DEPLOYMENT_OPTIONS.md  Launch_Vestim.bat  README.md  VESTIM_SERVER_CLIENT.md  requirements.txt  setup_server.sh
vestim/: config.py  logger_config.py
vestim/gateway/src/: data_augment_manager_qt.py  hyper_param_gui_qt.py  hyper_param_manager_qt.py  job_manager_qt.py  testing_manager_qt.py  training_setup_manager_qt.py  training_task_manager_qt.py
vestim/gui/src/: data_augment_gui_qt.py  data_import_gui_qt.py  hyper_param_gui_qt.py  testing_gui_qt.py  testing_gui_qt_test.py  training_setup_gui_qt.py  training_task_gui_qt.py
vestim/remote/: __init__.py  auto_deploying_ssh_manager.py  auto_x11_installer.py  config_dialog.py  gui_integration.py  launcher.py  ssh_manager.py
vestim/services/: normalization_service.py
vestim/services/data_conversion/: requirements.txt
vestim/services/data_conversion/src/: data_conversion_service.py
vestim/services/data_conversion/tests/: test_data_conversion_service.py
vestim/services/data_import/src/: data_import_service.py
vestim/services/data_processor/src/: data_augment_service.py  data_processor.py  data_processor_qt.py  data_processor_qt_arbin.py  data_processor_qt_digatron.py  data_processor_qt_stla.py
vestim/services/model_testing/src/: continuous_testing_service.py  continuous_testing_service_fixed.py  test_data_service.py  (+5 more)
vestim_cpu/: pyvenv.cfg
vestim_cpu/Scripts/: activate  activate.bat
(+24 files in other folders)
