[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vestim"
version = "1.0.0"
description = "Voltage Estimation Tool for Lithium-ion Batteries"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Biswanath Dehury", email = "dehuryb@mcmaster.ca"}]
keywords = ["battery", "voltage", "estimation", "lithium-ion", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "PyQt5>=5.15.0",
    "PyQt5-sip>=12.15.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "torch>=2.4.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/vestim"
Documentation = "https://github.com/yourusername/vestim/wiki"
Repository = "https://github.com/yourusername/vestim.git"
"Bug Tracker" = "https://github.com/yourusername/vestim/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["vestim*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
vestim = [
    "gui/resources/*",
    "gui/resources/**/*",
    "**/*.json",
    "**/*.txt",
    "**/*.md",
    "**/*.pdf",
    "**/*.ico",
    "**/*.png",
]

[project.scripts]
vestim = "vestim.gui.src.data_import_gui_qt:main"
vestim-gui = "vestim.gui.src.data_import_gui_qt:main"
